# flexierp-frontend

./: .gitignore  FlexiERPInstaller.nsi  README.md  angular.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
Pyhon-Services/: barcode_service.py  barcode_service.spec  comments.txt  models.py  requirements.txt  run_service.py  run_service.spec
public/assets/: editor-styles.css
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: dialog.json
src-tauri/src/: main.rs
src-tauri/wix/: build.bat  flexierp-debug.wixpdb  flexierp.wixobj  flexierp.wxs  tauri.wxl
src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  auth.guard.ts
src/app/DTO/: DTO.ts
src/app/MODEL/: MODEL.ts
src/app/auth/login/: login.component.html  login.component.ts
src/app/auth/signup/: signup.component.css  signup.component.html  signup.component.ts
src/app/components/accounts/: accounts.component.html  accounts.component.ts
src/app/components/alert/: alert.component.html  alert.component.ts
src/app/components/customers/: customers.component.ts
src/app/components/dashboard/: dashboard.component.html  dashboard.component.ts
src/app/components/design/: design.component.css  design.component.html  design.component.ts
src/app/components/header/: header.component.css  header.component.html  header.component.ts
src/app/components/home/: home.component.css  home.component.html  home.component.ts
src/app/services/: alert.service.ts  barcode.service.ts  colorservice.service.ts  common.service.ts  inventory.service.ts  login.service.ts  saleservice.service.spec.ts  saleservice.service.ts  signup.service.spec.ts  signup.service.ts  theme-service.service.ts  userinfowithlogin.service.spec.ts  userinfowithlogin.service.ts
src/app/shared/: theme.directive.ts  tooltip.directive.spec.ts  tooltip.directive.ts
src/environments/: environment.prod.ts  environment.ts
(+108 files in other folders)
