[package]
name = "app"
version = "0.1.4"
description = "Flexi Erp For You Buisness"
authors = ["vikash"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# ✅ Add this binary section (important)
[[bin]]
name = "app"
path = "src/main.rs"
# 👇 prevents blank terminal window on Windows
windows_subsystem = "windows"

[dependencies]
log = "0.4"
tauri-plugin-log = "2.5.1" 
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.1", features = [] }
chrono = "0.4.42"
tauri-plugin-dialog = "2.4.2"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies.windows]
version = "0.61.0"
features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
     "Win32_Security"
]



tauri = { version = "2.8.5", features = [] }
tauri-plugin-log   = "2.7.0"
tauri-plugin-fs    = "2.3.0"
tauri-plugin-shell = "2.3.0"
chrono = "0.4"
